force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Property object for Platform Developer I certification study - demonstrates custom objects, fields, relationships, validation rules, and formula fields</description>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP-{0000}</displayFormat>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>