force-app/main/default/objects/Property__c/fields/Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms__c</fullName>
    <description>Number of bathrooms - allows decimals for half baths</description>
    <label>Bathrooms</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>