force-app/main/default/objects/Property__c/fields/Days_On_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Market__c</fullName>
    <description>Formula calculating days since creation - demonstrates Formula with DATE functions</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days On Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>