force-app/main/default/objects/Property__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <description>Formula field concatenating address fields - demonstrates Formula field type</description>
    <formula>Address__c &amp; ", " &amp; City__c &amp; ", " &amp; TEXT(State__c) &amp; " " &amp; Zip_Code__c</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>