force-app/main/default/objects/Property__c/fields/Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Available__c</fullName>
    <description>Indicates if property is available - demonstrates Checkbox field type</description>
    <label>Is Available</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>