force-app/main/default/objects/Property__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Date property was purchased - demonstrates Date field type</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>