force-app/main/default/objects/Property__c/fields/Total_Maintenance_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Requests__c</fullName>
    <description>Roll-up summary counting maintenance requests - demonstrates Roll-Up Summary field</description>
    <label>Total Maintenance Requests</label>
    <summaryForeignKey>Maintenance_Request__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>