force-app/main/default/objects/Property__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Property zip code - demonstrates Text field with validation rule</description>
    <label>Zip Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>