force-app/main/default/objects/Property__c/validationRules/Purchase_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Date_Not_Future</fullName>
    <active>true</active>
    <description>Ensures purchase date is not in the future. EXAM TIP: Use TODAY() for current date comparisons</description>
    <errorConditionFormula>Purchase_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Purchase_Date__c</errorDisplayField>
    <errorMessage>Purchase Date cannot be in the future</errorMessage>
</ValidationRule>