force-app/main/default/objects/Property__c/validationRules/Rent_Required_When_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Rent_Required_When_Available</fullName>
    <active>true</active>
    <description>Requires rent amount when status is Available. EXAM TIP: Use ISPICKVAL for picklist comparisons</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Available"),
  ISBLANK(Monthly_Rent__c)
)</errorConditionFormula>
    <errorDisplayField>Monthly_Rent__c</errorDisplayField>
    <errorMessage>Monthly Rent is required when property status is Available</errorMessage>
</ValidationRule>